# ResoBin

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .prettierignore  .prettierrc  .stylelintrc.js  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  babel-plugin-macros.config.js  index.html  jsconfig.json  package-lock.json  package.json  webpack.config.js
.husky/: pre-commit
NEW_BUILD/: asset-manifest.json  index.html  manifest.json  service-worker.js  service-worker.js.map
backend/: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt  thunder-collection_ResoBin.json
backend/accounts/: serializers.py  urls.py  views.py
backend/login/my_project/: db.sqlite3
backend/login/my_project/my_project/: urls.py
backend/login/my_project/social_app/: apps.py
backend/resobin/: asgi.py  settings.py  urls.py  wsgi.py
backend/resobin/settings/: __init__.py  base.py  development.py  production.py
backend/tests/: thunder-collection_ResoBin.json
backend/user_profile/: models.py  urls.py
backend/user_profile/migrations/: 0001_initial.py
config/: craco.config.js
css/: card.css  style.css
frontend/: .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.jsx  RoutesConfig.jsx  index.css  index.jsx  store.jsx
nginx/: nginx.conf
public/: browserconfig.xml  index.html  manifest.json  sitemap.txt
src/: App.js  App.jsx  RoutesConfig.jsx  index.css  index.jsx  paths.jsx  reportWebVitals.jsx  routes.jsx  service-worker.js  serviceWorkerRegistration.jsx
src/api/: SSO.jsx  api-config.jsx  (+5 more)
(+604 files in other folders)
